# doc-agent

./: .env.example  LICENSE  README.md  project.md  pyproject.toml
plume_doc_agent/: agent.py  cli.py
plume_doc_agent/tools/: file_tools.py  git_tools.py  memory_tools.py
prompts/: doc_style.md
